objects/Integration_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Marketo_Sync_Token__c</fullName>
        <label>Marketo Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Token_Expiration__c</fullName>
        <label>Marketo Token Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salesforce_Incoming_Service_authToken__c</fullName>
        <inlineHelpText>Auth token for Salesforce-Incoming-Service</inlineHelpText>
        <label>Salesforce-Incoming-Service authToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Account_Data_With_Marketo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Account Data With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Case_Data_With_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Case Data With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Organic_Case_Data_With_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Organic Case Data With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Integration Settings</label>
</CustomObject>